fixing postgres driven causing trouble after deploying

--- a/Back-End/src/main/resources/application.properties
+++ b/Back-End/src/main/resources/application.properties
@@ -10,6 +10,8 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.show-sql=true
+spring.session.store-type=jdbc
+spring.session.jdbc.initialize-schema=always
 # Additional configurations (if needed)
 
 # Generate a NoHandlerFoundException with a 404
