--- a/Back-End/pom.xml
+++ b/Back-End/pom.xml
@@ -60,11 +60,6 @@
 			<artifactId>spring-boot-starter-tomcat</artifactId>
 			<scope>provided</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
 
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -73,6 +68,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>Climap</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
